--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "scripts": {
     "start": "node src/cli.js",
-    "test": "jest test/*"
+    "test": "jest test/*",
+    "release": "np"
   },
   "bin": "./src/cli.js",
   "devDependencies": {
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "np": "^6.1.0"
   }
 }
